# gluttonous-snake

./: .gitignore  CMakeLists.txt  README.md  game.c  macros.h  snake.c  snake.h  structs.h  test.c  utils.c  utils.h
.github/workflows/: build-and-release.yml
src/: game.c  main.c  menu.c  setting.c  snake.c  stats.c  utils.c
src/include/: game.h  macros.h  menu.h  settings.h  snake.h  stats.h  structs.h  utils.h
tests/: test.c
